# sophon-api-test

./: README.md  pushlish.sh
cpp/api/: rmbuild.sh
cpp/api/bmcv_basic/: CMakeLists.txt  main.cpp  main2.cpp  test.pcie
cpp/api/bmcv_encode_rtsp/: CMakeLists.txt  main.cpp
cpp/api/bmcv_encode_rtsp2/: CMakeLists.txt  main.cpp
cpp/api/bmcv_ffmpeg/: main.cpp
cpp/api/bmcv_points/: CMakeLists.txt  main.cpp
cpp/api/bmcv_read_bm_image/: CMakeLists.txt  main.cpp
cpp/api/bmcv_stitch/: main.cpp
cpp/api/bmcv_vpp_dwa_stitch_enc_rtsp/: main.cpp
cpp/api/decoder_h264/: main.cpp
cpp/api/decoder_rawstream/: main.cpp
cpp/api/encode_rtsp/: CMakeLists.txt  main.cpp
cpp/api/ff_video_decode/: CMakeLists.txt  ff_bmjpeg.cpp  ff_video_decode.cpp  test_ff_video_decode.cpp  video_decoder.cpp
cpp/api/ffmpeg_dec_enc/: main.cpp
cpp/api/get_sn/: CMakeLists.txt  get_sn.cpp
cpp/api/read_yuv/: main.cpp
cpp/api/resnet_bmcv_faiss/: CMakeLists.txt  faiss_index.txt  faiss_test.txt  main.cpp  resnet_bmcv.pcie  test_faiss_indexflatIP  test_faiss_indexflatIP.cpp
cpp/api/sail_basic/: main.cpp
cpp/api/sail_basic2/: main.cpp
cpp/api/sail_dec_rtsp/: CMakeLists.txt  main.cpp
cpp/api/sail_decoder_rawstream/: 20240701_192813_275020_5193-71161.h264  main.cpp  read_key.cpp
cpp/api/sail_decoder_rawstream2/: 20240702_150921_149369_6934-67356  main.cpp
cpp/api/sail_drawsquare/: CMakeLists.txt  main.cpp
cpp/api/sail_encode_rtsp/: test.py
cpp/api/sail_encode_rtsp_hand/: main.cpp
cpp/api/sail_read_yuv2/: main.cpp
cpp/api/sail_video_decoder/: CMakeLists.txt  main.cpp
cpp/api/segformer_sail_multi/: CMakeLists.txt  README.md  main.cpp  segformer.cpp  segformer.hpp
cpp/api/sophon-sample_0.7.0/samples/ff_scale_transcode/: ff_video_decode.cpp  ff_video_encode.cpp  test_ff_video_transcode.cpp
cpp/api/sophon-sample_0.7.0/samples/ff_video_decode/: ff_video_decode.cpp  test_ff_video_decode.cpp
cpp/api/time_stamp/: CMakeLists.txt  test_time_stamp.cpp
cpp/api/write_bm_image/: main.cpp
cpp/include/: bmnn_utils.h
cpp/learn/gaurd/: main.cpp  test
cpp/learn/getlog/: main.cpp  test
cpp/learn/threadpool/: main.cpp  taskpool.cpp  taskpool.h  test
cpp/learn/valgrind/: main.cpp  test
cpp/src/: ff_decode.cpp
cpp/template/: ipcmat-v2.0.tgz
cpp/template/ipcmat/: client.tgz  server.tgz
cpp/template/ipcmat/videotranscode/: opencv-videotranscode.cpp
cpp/template/ipcmat/vidmulti/: opencv_vidmulti.cpp
cpp/template/segformer_bmcv/: main.cpp  segformer.cpp
cpp/template/segformer_sail/: main.cpp
datasets/images/: src_dest.bgr  src_rect.bgr
datasets/videos/: stream.py
python/Stichy/: Corner.py  main.py  图像拼接算法预研.docx
python/api/: copy_to.py  crop.py  crop_asmat.py  cv_dec.py  cv_dec_multipro.py  cv_dec_multithread.py  decode.py  drawpoint.py  muldecode.py  rawstream.py  stride.py
python/api/encoder/: m_release.py  m_release1.py  test_encoder.py
python/api/pic_to_video/: pic2video.py
python/api/push_stream/: push_stream.py
python/api/results/: output_out264-20700.2640.avi  output_out264-20700.2644.avi  output_out264-20700.2645.avi
python/api/warp/: warp.py
python/fish_unwarp/: fish_unwarp.py  鱼眼展开算法预研.docx
scripts/: test_dec264_speed.sh
sophon_decoder/: main.py
sophon_decoder/models/: BM_NMS.py  inference_BMCV.py  yolox_bmodel.yaml
